--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
 body {
-    background: #121212;
-    color: white;
-    font-family: Arial;
+  font-family: "Montserrat", sans-serif;
 }
 
 .container {
