--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 body {
-  font-family: "Montserrat", sans-serif;
+    margin: 0;
+    font-family: "Montserrat", sans-serif;
+    background-color: #000; 
+    color: white;   
+
 }
 
 .container {
